intel/bench_214/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/log.txt
bench_214/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main.c:36:18: error: cannot initialize a variable of type 'struct bna_rcb *' with an rvalue of type 'void *'
        struct bna_rcb *rcb = NULL;
                        ^     ~~~~
bench_214/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main.c:37:18: error: cannot initialize a variable of type 'struct bna_tcb *' with an rvalue of type 'void *'
        struct bna_tcb *tcb = NULL;
                        ^     ~~~~
3 errors generated.
HLS FPGA Parse FAILED.
